-
Bug
-
Resolution: Done
-
P1: Critical
-
6.0.0 Beta1
-
None
-
2d0a5f7a014d1b84d5701d835aa28f1a047fbff5 (qt/qtbase/dev)
Given this code:
#include <QtCore/QDebug> #include <QtCore/QAssociativeIterable> #include <QtCore/QVariant> #include <QtCore/QMap> int main(int, char**) { auto container = QVariantMap(); container["one"] = 1; auto containerVariant = QVariant::fromValue(container); auto iter = containerVariant.value<QAssociativeIterable>(); auto f = iter.constFind("one"); auto value = iter.value("one"); qDebug() << value; return 0; }
we get this output:
QVariant(QVariant, QVariant(int, 1))
but we expect:
QVariant(int, 1)
- relates to
-
QTBUG-87686 QVariant segfaults with std::list
-
- Closed
-
| For Gerrit Dashboard: QTBUG-87688 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 318047,2 | QAssociativeIterable: Unwrap variants on value() | dev | qt/qtbase | Status: MERGED | +2 | 0 |